--- a/package.json
+++ b/package.json
@@ -11,17 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
     "axios": "^0.18.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "bluebird": "^3.5.2",
-    "bytebuffer": "^5.0.1",
     "eosjs": "^16.0.6",
     "eosjs-ecc": "^4.0.4",
-    "request": "^2.88.0",
     "secrets.js-grempe": "^1.1.0",
     "tweetnacl": "^1.0.0",
-    "tweetnacl-util": "^0.15.0"
+    "tweetnacl-util": "^0.15.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.26.0"
