--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bluebird": "^3.5.2",
     "eosjs": "^16.0.6",
     "eosjs-ecc": "^4.0.4",
+    "ipfs-http-client": "^28.0.0",
     "secrets.js-grempe": "^1.1.0",
     "tweetnacl": "^1.0.0",
     "tweetnacl-util": "^0.15.0",
