implement ipfs multihash for client

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "eosjs": "^16.0.6",
     "eosjs-ecc": "^4.0.4",
     "ipfs-http-client": "^28.0.0",
+    "ipfs-unixfs": "^0.1.16",
+    "ipld-dag-pb": "^0.15.1",
+    "multihashes": "^0.4.14",
     "secrets.js-grempe": "^1.1.0",
     "tweetnacl": "^1.0.0",
     "tweetnacl-util": "^0.15.0",
