--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "priveos",
-  "version": "1.0.0",
-  "description": "",
+  "version": "v0.1.5",
+  "description": "privEOS client",
   "main": "index.js",
   "scripts": {
-    "build_node": "rimraf dist/node && babel ./ --out-dir dist/node --ignore ./node_modules,./.babelrc,./package.json,./package-lock.json,./npm-debug.log,webpack.browser.js,test.js,config-test.js --copy-files",
-    "build_browser": "rimraf dist/browser && webpack --config webpack.browser.js",
+    "build_node": "babel ./ --out-dir dist/node --ignore ./node_modules,./.babelrc,./package.json,./package-lock.json,./npm-debug.log,webpack.browser.js,test.js,config-test.js --copy-files",
+    "build_browser": "webpack --config webpack.browser.js",
     "test": "jest"
   },
   "author": "",
@@ -15,6 +15,7 @@
     "bluebird": "^3.5.2",
     "eosjs": "^16.0.6",
     "eosjs-ecc": "^4.0.4",
+    "global": "^4.3.2",
     "ipfs-unixfs": "^0.1.16",
     "ipld-dag-pb": "^0.15.1",
     "loglevel": "^1.6.1",
@@ -23,7 +24,7 @@
     "tweetnacl-util": "^0.15.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
+    "@babel/core": "^7.3.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
     "@babel/preset-env": "^7.3.1",
     "babel-jest": "^24.1.0",
