--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "tweetnacl-util": "^0.15.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
     "@babel/plugin-transform-runtime": "^7.2.0",
