--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build_node": "rm -rf dist/node && babel src --out-dir dist/node",
     "build_browser": "webpack --config webpack.browser.js",
     "prePublish": "npm run build_node && npm run build_browser",
-    "test": "jest"
+    "test": "jest",
+    "testWatch": "jest --watch"
   },
   "author": "",
   "license": "ISC",
@@ -29,7 +30,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
-    "babel-jest": "^24.1.0",
+    "babel-jest": "^24.8.0",
     "jest": "^24.0.0",
     "uuid": "^3.3.2",
     "webpack": "^4.29.6",
