--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.3.1",
+    "@hapi/bourne": "^1.3.2",
     "axios": "^0.18.0",
     "eosjs": "^16.0.6",
     "eosjs-ecc-priveos": "^4.0.5",
