--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "author": "",
   "license": "ISC",
+  "resolutions": {
+    "lodash": "4.17.13"
+  },
   "dependencies": {
     "@babel/runtime": "^7.3.1",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "eosjs": "^16.0.6",
     "eosjs-ecc-priveos": "^4.0.7",
     "ipfs-unixfs": "^0.1.16",
