--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "priveos",
-  "version": "v0.2.3",
+  "version": "v0.2.4",
   "description": "privEOS client",
   "main": "dist/node/index.js",
   "scripts": {
@@ -16,8 +16,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.3.1",
-    "axios": "^0.18.1",
-    "eosjs": "^16.0.6",
+    "axios": "^0.19.0",
     "eosjs-ecc-priveos": "^4.0.8",
     "ipfs-unixfs": "^0.1.16",
     "ipld-dag-pb": "^0.15.1",
@@ -36,6 +35,8 @@
     "jest": "^24.0.0",
     "uuid": "^3.3.2",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3"
+    "webpack-cli": "^3.2.3",
+    "eosjs": "20",
+    "node-fetch": "^2.6.0"
   }
 }
